--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "next": "^15.1.0"
+    "next": "^15.1.0",
+    "lucide-react": "^0.469.0",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
